--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang-"en"> 
+<html lang="en"> 
 <head> 
   <meta charset="UTF-8"› 
   <meta http-equiv="X-UA-Compatible" content="IE-edge">
@@ -10,4 +10,4 @@
   <h3>欢迎来到我的网站</h3>
   <a href="https://space.bilibili.com/1076095077">我的B站主页</a>
 </body> 
-</htm1>
+</html>
