--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head> 
 <body>
   <h3>欢迎来到我的网站</h3>
-  <a href="https://space.bilibili.com/1076095077">我的B站主页</a>
+  <a href="http://faculty.bjtu.edu.cn/9721/">北京交通大学教师主页</a>
 </body> 
 </html>
