--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!-- <!DOCTYPE html> 
 <html lang="en"> 
 <head> 
   <meta charset="UTF-8"› 
@@ -10,4 +10,40 @@
   <h3>欢迎来到我的网站</h3>
   <a href="http://faculty.bjtu.edu.cn/9721/">北京交通大学教师主页</a>
 </body> 
+</html>
+ -->
+
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>个人主页</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1 {
+            color: #007bff;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>欢迎来到我的个人主页</h1>
+    <p>我是John，一名Web开发者。</p>
+    <p>在这个页面上，您可以了解更多关于我的信息：</p>
+    <ul>
+        <li>年龄：30岁</li>
+        <li>职业：Web开发者</li>
+        <li>爱好：编程、旅行、摄影</li>
+    </ul>
+    <h2>联系方式</h2>
+    <p>邮箱：john@example.com</p>
+    <p>电话：123-456-7890</p>
+</body>
 </html>
