--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </html>
  -->
 
- <!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,4 +46,69 @@
     <p>邮箱：john@example.com</p>
     <p>电话：123-456-7890</p>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>实验室成员信息</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1 {
+            color: #007bff;
+        }
+        h2 {
+            color: #009688;
+        }
+        p {
+            margin-bottom: 10px;
+        }
+        .member {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+        .name {
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .role {
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <h1>实验室成员信息</h1>
+
+    <div class="member">
+        <div class="name">张三</div>
+        <div class="role">实验室负责人</div>
+        <p>年龄：35岁</p>
+        <p>研究方向：人工智能</p>
+        <p>联系方式：zhangsan@example.com</p>
+    </div>
+
+    <div class="member">
+        <div class="name">李四</div>
+        <div class="role">研究助理</div>
+        <p>年龄：28岁</p>
+        <p>研究方向：数据分析</p>
+        <p>联系方式：lisi@example.com</p>
+    </div>
+
+    <div class="member">
+        <div class="name">王五</div>
+        <div class="role">实验员</div>
+        <p>年龄：30岁</p>
+        <p>研究方向：生物学</p>
+        <p>联系方式：wangwu@example.com</p>
+    </div>
+</body>
 </html>
+
